Opened 5 years ago

Closed 5 years ago

Last modified 5 years ago

#9148 closed defect (fixed)

Downloading an https file with gnutls is too slow

Reported by: Taner Sener Owned by:
Priority: normal Component: avformat
Version: git-master Keywords: gnutls, https regression
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

Summary of the bug:

Downloading a file using https protocol is too slow. Download times out frequently. This happens when ffmpeg is built with gnutls on macOS.

This performance decrease is caused by https://git.ffmpeg.org/gitweb/ffmpeg.git/commit/70d8077b795766e2486e6ec8110f22a97362d6d6. If you checkout master using a previous commit e.g. a1553b0cfbff92223caaed4103b92373b2339173 the same file is downloaded in 35 seconds.

See attachments provided.

How to reproduce:

% ffmpeg -y -report -i https://snapcellvideos.s3.amazonaws.com/manual/24/manualupload_16098586962947166522.mp4 -c:v mpeg4 /tmp/latest.mp4
ffmpeg version N-101485-g16e8ea0dde Copyright (c) 2000-2021 the FFmpeg developers
  built with Apple clang version 12.0.0 (clang-1200.0.32.29)
  configuration: --enable-gnutls
  libavutil      56. 68.100 / 56. 68.100
  libavcodec     58.130.100 / 58.130.100
  libavformat    58. 72.100 / 58. 72.100
  libavdevice    58. 12.100 / 58. 12.100
  libavfilter     7.109.100 /  7.109.100
  libswscale      5.  8.100 /  5.  8.100
  libswresample   3.  8.100 /  3.  8.100

Attachments (3)

console.commit.a1553b0cfbff92223caaed4103b92373b2339173.txt (2.5 KB ) - added by Taner Sener 5 years ago.
Console output for the same command executed on master with commit a1553b0cfbff92223caaed4103b92373b2339173
ffmpeg-20210311-200939.log (1.1 MB ) - added by Taner Sener 5 years ago.
report file created by the command
console.txt (3.9 KB ) - added by Taner Sener 5 years ago.
Console output

Download all attachments as: .zip

Change History (7)

by Taner Sener, 5 years ago

Console output for the same command executed on master with commit a1553b0cfbff92223caaed4103b92373b2339173

by Taner Sener, 5 years ago

Attachment: ffmpeg-20210311-200939.log added

report file created by the command

by Taner Sener, 5 years ago

Attachment: console.txt added

Console output

comment:1 by Andriy Gelman, 5 years ago

I sent in a patch:
https://patchwork.ffmpeg.org/project/ffmpeg/patch/20210314045432.214832-1-andriy.gelman@gmail.com/

Could you leave the link for a bit longer so that others could test, please?

in reply to:  1 comment:2 by Taner Sener, 5 years ago

Replying to taliho:

I sent in a patch:
https://patchwork.ffmpeg.org/project/ffmpeg/patch/20210314045432.214832-1-andriy.gelman@gmail.com/

Could you leave the link for a bit longer so that others could test, please?

Thanks! Sure, I'll reach out to the link owner and ask him to keep the link alive.

comment:3 by Andriy Gelman, 5 years ago

Resolution: fixed
Status: newclosed
Last edited 5 years ago by Carl Eugen Hoyos (previous) (diff)

comment:4 by Carl Eugen Hoyos, 5 years ago

Component: undeterminedavformat
Keywords: regression added
Note: See TracTickets for help on using tickets.